--- a/backend/package.json
+++ b/backend/package.json
@@ -2,5 +2,33 @@
   "name": "SnowTalk-Server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "cross-env NODE_ENV=production node ./build/app.js",
+    "dev": "cross-env NODE_ENV=development nodemon -e ts --exec ts-node ./src/app.ts",
+    "build": "tsc",
+    "prod": "yarn build && yarn start",
+    "test": "echo \"Error: no test specified\""
+  },
+  "dependencies": {
+    "class-validator": "^0.11.1",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.1.0",
+    "typedi": "^0.8.0",
+    "typeorm": "^0.2.24"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.4",
+    "@types/jsonwebtoken": "^8.3.8",
+    "@types/node": "^13.11.0",
+    "nodemon": "^2.0.2",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
+  }
 }
