--- a/backend/package.json
+++ b/backend/package.json
@@ -11,21 +11,27 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "class-validator": "^0.11.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.28",
     "mysql2": "^2.1.0",
+    "socket.io": "^2.3.0",
     "typedi": "^0.8.0",
-    "typeorm": "^0.2.24"
+    "typeorm": "^0.2.24",
+    "typeorm-typedi-extensions": "^0.2.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
+    "@types/hapi__joi": "^16.0.12",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.11.0",
+    "@types/socket.io": "^2.1.4",
     "nodemon": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.8.2",
