--- a/backend/package.json
+++ b/backend/package.json
@@ -19,17 +19,21 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment-timezone": "^0.5.28",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "serve-static": "^1.14.1",
     "socket.io": "^2.3.0",
     "typedi": "^0.8.0",
     "typeorm": "^0.2.24",
-    "typeorm-typedi-extensions": "^0.2.3"
+    "typeorm-typedi-extensions": "^0.2.3",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
     "@types/hapi__joi": "^16.0.12",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/multer": "^1.4.2",
     "@types/node": "^13.11.0",
     "@types/socket.io": "^2.1.4",
     "nodemon": "^2.0.2",
