--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,16 +24,26 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.2",
     "electron-is-dev": "^1.1.0",
+    "immer": "^6.0.3",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.14.149",
+    "@types/react-redux": "^7.1.7",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "electron": "^8.2.0",
