--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,6 @@
     "release": "yarn react-build && electron-builder --publish=always"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -36,6 +34,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
