--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "sweetalert2": "^9.10.10",
     "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
   },
