--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "async-redis": "^1.1.7",
     "class-validator": "^0.11.1",
     "core-decorators": "^0.20.0",
     "cors": "^2.8.5",
