--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/express": "^4.17.4",
     "@types/hapi__joi": "^16.0.12",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/moment-timezone": "^0.5.13",
     "@types/multer": "^1.4.2",
     "@types/node": "^13.11.0",
     "@types/socket.io": "^2.1.4",
