--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "socket.io-client": "^2.3.0",
     "sweetalert2": "^9.10.10",
     "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
@@ -45,6 +46,7 @@
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.149",
     "@types/react-redux": "^7.1.7",
+    "@types/socket.io-client": "^1.4.32",
     "concurrently": "^5.1.0",
     "cross-env": "^7.0.2",
     "electron": "^8.2.0",
