--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment-timezone": "^0.5.28",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
