--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "electron-is-dev": "^1.1.0",
     "immer": "^6.0.3",
     "lodash": "^4.17.15",
+    "moment": "2.24.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -52,6 +53,9 @@
     "electron": "^8.2.0",
     "electron-builder": "^22.4.1",
     "wait-on": "^4.0.1"
+  },
+  "resolutions": {
+    "moment": "2.24.0"
   },
   "eslintConfig": {
     "extends": "react-app"
