FIX divide core reducer

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -23,4 +23,36 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-public/
+# image
+*.jpg
+*.jpeg
+*.jpe
+*.jif
+*.jfif
+*.jfi
+*.jp2
+*.j2k
+*.jpf
+*.jpx
+*.jpm
+*.mj2
+*.jxr
+*.hdp
+*.wdp
+*.gif
+*.raw
+*.webp
+*.png
+*.apng
+*.mng
+*.tiff
+*.tif
+*.svg
+*.svgz
+*.pdf
+*.xbm
+*.bmp
+*.dib
+*.ico
+*.3dm
+*.max
