--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/react-virtualized": "^9.21.10",
     "axios": "^0.19.2",
     "electron-is-dev": "^1.1.0",
+    "emoji-picker-react": "^3.1.7",
     "immer": "^6.0.3",
     "lodash": "^4.17.15",
     "moment": "2.24.0",
