--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "directories": {
       "buildResources": "public"
     },
-    "target" : "zip"
+    "target": "zip"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -35,7 +35,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-virtualized": "^9.21.10",
     "axios": "^0.19.2",
-    "emoji-picker-react": "^3.1.7",
+    "emoji-mart": "^3.0.0",
     "immer": "^6.0.3",
     "lodash": "^4.17.15",
     "moment": "2.24.0",
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/emoji-mart": "^3.0.2",
     "@types/lodash": "^4.14.149",
     "@types/react-redux": "^7.1.7",
     "@types/socket.io-client": "^1.4.32",
